--- a/app/android/settings.gradle
+++ b/app/android/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'when-did-i-last'
+rootProject.name = 'When Did I Last'
 
 apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle");
 useExpoModules()
