--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,8 @@
 {
   "name": "when-did-i-last",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo run:android",
+    "start": "react-native start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -18,7 +17,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-mmkv": "^2.10.2",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.6.3",
