--- a/app/app.json
+++ b/app/app.json
@@ -18,7 +18,8 @@
       "supportsTablet": true
     },
     "android": {
-      "package": "com.benedikt.weyer.whendidilast"
+      "package": "com.benedikt.weyer.whendidilast",
+      "versionCode": 2
     },
     "extra": {
       "eas": {
